--- a/admin.html
+++ b/admin.html
@@ -3,308 +3,121 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin - Jayvee Hall of Mansion</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
+  <title>Admin Dashboard - Jayvee Hall of Mansion</title>
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      databaseURL: "https://YOUR_PROJECT_ID-default-rtdb.firebaseio.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+    const app = firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+  </script>
+
   <style>
     body {
+      background: url('assets/bgindex.jpg') no-repeat center center/cover;
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background: url('assets/admin-bg.jpg') no-repeat center center/cover;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    header {
-      background: rgba(0,0,0,0.7);
+      padding: 20px;
       color: white;
+    }
+    .dashboard {
+      max-width: 1200px;
+      margin: auto;
+      background: rgba(0,0,0,0.6);
+      padding: 20px;
+      border-radius: 15px;
+    }
+    .booking-card {
+      background: rgba(255,255,255,0.9);
+      color: #000;
       padding: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-size: 22px;
-      font-weight: bold;
-    }
-
-    .notif-bell {
-      position: relative;
-      cursor: pointer;
-    }
-
-    .notif-bell::after {
-      content: attr(data-count);
-      position: absolute;
-      top: -5px;
-      right: -8px;
-      background: red;
-      color: white;
-      font-size: 12px;
-      font-weight: bold;
-      padding: 2px 6px;
-      border-radius: 50%;
-      display: none;
-    }
-
-    .notif-bell[data-count]:not([data-count="0"])::after {
-      display: block;
-      animation: pulse 1s infinite;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.3); }
-      100% { transform: scale(1); }
-    }
-
-    .admin-container {
-      flex: 1;
-      padding: 20px;
-      overflow-x: auto;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background: white;
       border-radius: 10px;
-      overflow: hidden;
+      margin: 10px 0;
+      position: relative;
     }
-
-    th, td {
-      padding: 12px;
-      text-align: center;
-      border-bottom: 1px solid #ddd;
-    }
-
-    th {
-      background: #333;
-      color: white;
-    }
-
-    tr:hover { background: #f2f2f2; }
-
     button {
-      padding: 6px 12px;
+      margin: 5px;
+      padding: 8px 12px;
       border: none;
-      cursor: pointer;
       border-radius: 5px;
-      margin: 2px;
-      font-size: 14px;
-    }
-
-    .approve { background: #28a745; color: white; }
-    .reject { background: #dc3545; color: white; }
-    .details { background: #007bff; color: white; }
-    .receipt { background: #6f42c1; color: white; }
-
-    /* Modal */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-    .modal-content {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      width: 400px;
-      max-width: 90%;
-      position: relative;
-      animation: fadeIn 0.3s ease-in-out;
-    }
-    .close {
-      position: absolute;
-      top: 10px; right: 15px;
-      font-size: 22px;
       cursor: pointer;
+      font-weight: bold;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Notification popup */
-    .notif-popup {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: #28a745;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 6px;
-      display: none;
-      z-index: 2000;
-      animation: fadeIn 0.5s ease-in-out;
-    }
-
-    @media (max-width: 768px) {
-      table { font-size: 12px; }
-      th, td { padding: 8px; }
-      .modal-content { width: 90%; }
-    }
+    .approve { background: green; color: white; }
+    .reject { background: red; color: white; }
+    .receipt { background: #333; color: white; }
   </style>
 </head>
 <body>
 
-<header>
-  Admin Panel - Jayvee Hall of Mansion
-  <div class="notif-bell" id="notifBell" data-count="0">🔔</div>
-</header>
-
-<div class="admin-container">
-  <table>
-    <thead>
-      <tr>
-        <th>User</th>
-        <th>Room</th>
-        <th>Date</th>
-        <th>Status</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody id="bookingTable"></tbody>
-  </table>
-</div>
-
-<div class="notif-popup" id="notifPopup">New booking received!</div>
-
-<!-- Details Modal -->
-<div id="detailsModal" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeDetails()">&times;</span>
-    <h3>Booking Details</h3>
-    <p><b>User:</b> <span id="detailUser"></span></p>
-    <p><b>Room:</b> <span id="detailRoom"></span></p>
-    <p><b>Date:</b> <span id="detailDate"></span></p>
-    <p><b>Status:</b> <span id="detailStatus"></span></p>
-  </div>
+<div class="dashboard">
+  <h1>Admin Dashboard</h1>
+  <div id="bookingList"></div>
 </div>
 
 <script>
-  let bookings = JSON.parse(localStorage.getItem("bookings")) || [];
-  let lastBookingCount = bookings.length;
+  const bookingList = document.getElementById("bookingList");
 
-  function loadBookings() {
-    bookings = JSON.parse(localStorage.getItem("bookings")) || [];
-    const table = document.getElementById("bookingTable");
-    table.innerHTML = "";
+  db.ref('bookings').on('value', (snapshot) => {
+    bookingList.innerHTML = "";
+    const data = snapshot.val();
 
-    if (bookings.length === 0) {
-      table.innerHTML = "<tr><td colspan='5'>No bookings yet</td></tr>";
-      return;
-    }
-
-    bookings.forEach((b, index) => {
-      table.innerHTML += `
-        <tr>
-          <td>${b.name || "Unknown"}</td>
-          <td>${b.room}</td>
-          <td>${b.date || "N/A"}</td>
-          <td style="font-weight:bold; color:${b.status === 'Approved' ? 'green' : b.status === 'Rejected' ? 'red' : 'orange'};">
-            ${b.status}
-          </td>
-          <td>
-            <button class="approve" onclick="updateStatus(${index}, 'Approved')">Approve</button>
-            <button class="reject" onclick="updateStatus(${index}, 'Rejected')">Reject</button>
-            <button class="details" onclick="showDetails(${index})">Details</button>
-            <button class="receipt" onclick="downloadReceipt(${index})">Receipt</button>
-          </td>
-        </tr>
+    for (let key in data) {
+      const booking = data[key];
+      const card = document.createElement("div");
+      card.className = "booking-card";
+      card.innerHTML = `
+        <h3>${booking.room}</h3>
+        <p><strong>Name:</strong> ${booking.name}</p>
+        <p><strong>Email:</strong> ${booking.email}</p>
+        <p><strong>Date:</strong> ${booking.date}</p>
+        <p><strong>Status:</strong> ${booking.status}</p>
+        <button class="approve" onclick="updateStatus('${key}', 'Approved')">Approve</button>
+        <button class="reject" onclick="updateStatus('${key}', 'Rejected')">Reject</button>
+        <button class="receipt" onclick="downloadReceipt('${booking.name}','${booking.room}','${booking.date}','${booking.status}')">Download Receipt</button>
       `;
-    });
-  }
-
-  function updateStatus(index, status) {
-    bookings[index].status = status;
-    localStorage.setItem("bookings", JSON.stringify(bookings));
-    loadBookings();
-    alert(`Booking ${status}!`);
-  }
-
-  function showDetails(index) {
-    const b = bookings[index];
-    document.getElementById("detailUser").innerText = b.name || "Unknown";
-    document.getElementById("detailRoom").innerText = b.room;
-    document.getElementById("detailDate").innerText = b.date || "N/A";
-    document.getElementById("detailStatus").innerText = b.status;
-    document.getElementById("detailsModal").style.display = "flex";
-  }
-
-  function closeDetails() {
-    document.getElementById("detailsModal").style.display = "none";
-  }
-
-  async function downloadReceipt(index) {
-    const { jsPDF } = window.jspdf;
-    const booking = bookings[index];
-
-    const pdf = new jsPDF({ orientation: "portrait", unit: "px", format: "a4" });
-
-    // Background
-    const bg = new Image();
-    bg.src = "assets/receipt-bg.jpg";
-
-    bg.onload = function() {
-      pdf.addImage(bg, "JPEG", 0, 0, 420, 595);
-
-      // Logo
-      const logo = new Image();
-      logo.src = "assets/logo.png"; 
-      logo.onload = function() {
-        pdf.addImage(logo, "PNG", 160, 20, 100, 50);
-
-        pdf.setFontSize(16);
-        pdf.text("Jayvee Hall of Mansion - Booking Receipt", 30, 100);
-        pdf.setFontSize(12);
-        pdf.text(`User: ${booking.name || "Unknown"}`, 30, 140);
-        pdf.text(`Room: ${booking.room}`, 30, 160);
-        pdf.text(`Date: ${booking.date || "N/A"}`, 30, 180);
-        pdf.text(`Status: ${booking.status}`, 30, 200);
-
-        // QR Code generation
-        const qr = qrcode(0, "L");
-        qr.addData(`Booking for ${booking.name || "Guest"} - ${booking.room} - ${booking.date}`);
-        qr.make();
-        const qrImg = qr.createDataURL();
-
-        pdf.addImage(qrImg, "PNG", 300, 140, 80, 80);
-
-        pdf.save(`Booking_Receipt_${booking.name || "Guest"}.pdf`);
-      };
-    };
-  }
-
-  function showNotification() {
-    const bell = document.getElementById("notifBell");
-    const popup = document.getElementById("notifPopup");
-    let newCount = bookings.length - lastBookingCount;
-    if (newCount > 0) {
-      bell.setAttribute("data-count", newCount);
-      popup.style.display = "block";
-      setTimeout(() => popup.style.display = "none", 3000);
+      bookingList.appendChild(card);
     }
+  });
+
+  function updateStatus(id, status) {
+    db.ref('bookings/' + id).update({ status: status });
   }
 
-  // Real-time booking check
-  setInterval(() => {
-    let currentBookings = JSON.parse(localStorage.getItem("bookings")) || [];
-    if (currentBookings.length > lastBookingCount) {
-      bookings = currentBookings;
-      loadBookings();
-      showNotification();
-      lastBookingCount = currentBookings.length;
-    }
-  }, 2000);
-
-  window.onload = loadBookings;
+  // Generate and Download Receipt
+  function downloadReceipt(name, room, date, status) {
+    const receiptWindow = window.open('', '_blank');
+    receiptWindow.document.write(`
+      <html>
+        <head><title>Booking Receipt</title></head>
+        <body style="text-align:center; font-family: Arial; background:url('assets/bgindex.jpg') no-repeat center center/cover; height:100vh; display:flex; align-items:center; justify-content:center;">
+          <div style="background: rgba(255,255,255,0.9); padding:20px; border-radius:15px;">
+            <h1>Jayvee Hall of Mansion</h1>
+            <h2>Booking Receipt</h2>
+            <p><strong>Name:</strong> ${name}</p>
+            <p><strong>Room:</strong> ${room}</p>
+            <p><strong>Date:</strong> ${date}</p>
+            <p><strong>Status:</strong> ${status}</p>
+            <p>Thank you for booking with us!</p>
+          </div>
+        </body>
+      </html>
+    `);
+    receiptWindow.document.close();
+    receiptWindow.print();
+  }
 </script>
 
 </body>
-                                                       </html>
+</html>
