--- a/home.html
+++ b/home.html
@@ -3,282 +3,102 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Jayvee Hall of Mansion</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Jayvee Hall of Mansion - Home</title>
   <style>
     body {
       margin: 0;
+      background: url('assets/bgindex.jpg') no-repeat center center/cover;
       font-family: Arial, sans-serif;
-      background: url('assets/bgindex.jpg') no-repeat center center fixed;
-      background-size: cover;
+      color: white;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      color: #fff;
-    }
-
-    header {
-      background: rgba(0,0,0,0.6);
-      text-align: center;
-      padding: 20px;
-      font-size: 24px;
-    }
-
-    .home-container {
-      flex: 1;
-      max-width: 1200px;
-      margin: 20px auto;
-      background: rgba(0,0,0,0.5);
-      padding: 20px;
-      border-radius: 12px;
-      text-align: center;
-    }
-
-    .room-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .room-card {
-      background: rgba(255,255,255,0.9);
-      color: #333;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-      transition: 0.3s;
-    }
-
-    .room-card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
-
-    .room-card:hover {
-      transform: scale(1.02);
-    }
-
-    .room-card h3 {
-      margin: 10px 0;
-    }
-
-    .room-card p {
-      margin: 5px 0 10px;
-    }
-
-    .card-buttons {
-      margin-bottom: 15px;
-    }
-
-    .card-buttons button {
-      margin: 5px;
-      padding: 8px 12px;
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
-      background: #333;
-      color: white;
-      font-size: 14px;
-    }
-
-    .card-buttons button:hover {
-      background: #555;
-    }
-
-    /* Modal */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.6);
       justify-content: center;
       align-items: center;
-      z-index: 1000;
     }
-
-    .modal-content {
-      background: white;
+    .container {
+      background: rgba(0,0,0,0.6);
       padding: 20px;
-      border-radius: 12px;
-      width: 400px;
-      max-width: 90%;
+      border-radius: 15px;
+      width: 90%;
+      max-width: 600px;
       text-align: center;
-      position: relative;
     }
-
-    .modal-content h3 {
-      color: #333;
+    .booking-status {
+      background: rgba(255,255,255,0.9);
+      color: black;
+      margin-top: 15px;
+      padding: 15px;
+      border-radius: 10px;
     }
-
-    .modal-content p {
-      color: #555;
-    }
-
-    .close {
-      position: absolute;
-      top: 10px; right: 15px;
-      font-size: 22px;
-      cursor: pointer;
-      color: #333;
-    }
-
-    /* Notifications */
-    #notifications {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      z-index: 2000;
-    }
-
-    .notif {
-      background: rgba(0,0,0,0.8);
-      color: #fff;
+    .btn {
+      display: inline-block;
+      margin: 10px 0;
       padding: 12px 20px;
-      border-radius: 8px;
-      min-width: 200px;
-      text-align: center;
-      animation: fadeIn 0.5s;
+      background: #333;
+      color: white;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
     }
-
-    .notif.approved { background: rgba(40,167,69,0.9); }
-    .notif.rejected { background: rgba(220,53,69,0.9); }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateX(50px); }
-      to { opacity: 1; transform: translateX(0); }
-    }
-
-    @media (max-width: 768px) {
-      header { font-size: 20px; }
-      .room-card img { height: 150px; }
-    }
+    .btn:hover { background: #555; }
   </style>
 </head>
 <body>
-
-<header>
-  Welcome to Jayvee Hall of Mansion
-</header>
-
-<div class="home-container fade-in">
-  <p>Experience luxury and comfort in the heart of Malungon, Sarangani. Explore our elegant rooms and choose the perfect stay for you.</p>
-
-  <!-- Grid Layout for Rooms -->
-  <div class="room-grid">
-    <div class="room-card">
-      <img src="assets/room1.jpg" alt="Deluxe Room">
-      <h3>Room 101 - Deluxe Room</h3>
-      <p>₱3,500 / night</p>
-      <div class="card-buttons">
-        <button onclick="showRoomDetails(0)">View Details</button>
-        <button onclick="bookRoom('Room 101 - Deluxe Room')">Book Now</button>
-      </div>
-    </div>
-
-    <div class="room-card">
-      <img src="assets/room2.jpg" alt="Executive Suite">
-      <h3>Room 102 - Executive Suite</h3>
-      <p>₱5,200 / night</p>
-      <div class="card-buttons">
-        <button onclick="showRoomDetails(1)">View Details</button>
-        <button onclick="bookRoom('Room 102 - Executive Suite')">Book Now</button>
-      </div>
-    </div>
-
-    <div class="room-card">
-      <img src="assets/room3.jpg" alt="Family Room">
-      <h3>Room 103 - Family Room</h3>
-      <p>₱4,000 / night</p>
-      <div class="card-buttons">
-        <button onclick="showRoomDetails(2)">View Details</button>
-        <button onclick="bookRoom('Room 103 - Family Room')">Book Now</button>
-      </div>
-    </div>
-
-    <div class="room-card">
-      <img src="assets/room4.jpg" alt="Presidential Suite">
-      <h3>Room 104 - Presidential Suite</h3>
-      <p>₱8,000 / night</p>
-      <div class="card-buttons">
-        <button onclick="showRoomDetails(3)">View Details</button>
-        <button onclick="bookRoom('Room 104 - Presidential Suite')">Book Now</button>
-      </div>
-    </div>
+  <div class="container">
+    <h1>Welcome to Jayvee Hall of Mansion</h1>
+    <a class="btn" href="booking.html">Book a Room</a>
+    <h3>Your Bookings:</h3>
+    <div id="userBookings"></div>
   </div>
-</div>
 
-<!-- Modal for Room Details -->
-<div id="roomModal" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeRoomModal()">&times;</span>
-    <h3 id="roomTitle"></h3>
-    <p id="roomDesc"></p>
-    <p id="roomPrice"></p>
-    <button onclick="proceedToBooking()">Interested</button>
-    <button onclick="closeRoomModal()">Not Interested</button>
-  </div>
-</div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
-<!-- Notifications -->
-<div id="notifications"></div>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCdMcz7H8k5QjQikD6ZAlf7kHw7BbUBO70",
+      authDomain: "jayveehallofmansion.firebaseapp.com",
+      databaseURL: "https://jayveehallofmansion-default-rtdb.firebaseio.com",
+      projectId: "jayveehallofmansion",
+      storageBucket: "jayveehallofmansion.firebasestorage.app",
+      messagingSenderId: "596113378063",
+      appId: "1:596113378063:web:ae6fa08175627727660c7a",
+      measurementId: "G-LY9QYJKZMX"
+    };
 
-<script>
-  const roomDetails = [
-    { title: "Room 101 - Deluxe Room", desc: "Our Deluxe Room offers comfort and elegance with a cozy king-size bed, complimentary Wi-Fi, and a modern bathroom. Perfect for solo travelers or couples.", price: "₱3,500 / night" },
-    { title: "Room 102 - Executive Suite", desc: "Executive Suite provides a luxurious experience with spacious interiors, a private lounge area, and premium amenities for your relaxing stay.", price: "₱5,200 / night" },
-    { title: "Room 103 - Family Room", desc: "Family Room is designed for groups and families, featuring multiple beds, entertainment options, and ample space for a comfortable stay.", price: "₱4,000 / night" },
-    { title: "Room 104 - Presidential Suite", desc: "The Presidential Suite is our finest offering with a majestic view, large living room, Jacuzzi, and VIP services for a lavish stay.", price: "₱8,000 / night" }
-  ];
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
 
-  let selectedRoom = "";
+    // Store email in localStorage after booking
+    const userEmail = localStorage.getItem("userEmail");
+    const userBookingsDiv = document.getElementById("userBookings");
 
-  function showRoomDetails(index) {
-    selectedRoom = roomDetails[index].title;
-    document.getElementById("roomTitle").innerText = roomDetails[index].title;
-    document.getElementById("roomDesc").innerText = roomDetails[index].desc;
-    document.getElementById("roomPrice").innerText = roomDetails[index].price;
-    document.getElementById("roomModal").style.display = "flex";
-  }
+    function renderBooking(id, booking) {
+      return `
+        <div class="booking-status">
+          <strong>Room:</strong> ${booking.room}<br>
+          <strong>Date:</strong> ${booking.date}<br>
+          <strong>Status:</strong> ${booking.status}
+        </div>
+      `;
+    }
 
-  function closeRoomModal() {
-    document.getElementById("roomModal").style.display = "none";
-  }
-
-  function proceedToBooking() {
-    window.location.href = `booking.html?room=${encodeURIComponent(selectedRoom)}`;
-  }
-
-  function bookRoom(roomName) {
-    window.location.href = `booking.html?room=${encodeURIComponent(roomName)}`;
-  }
-
-  // Load notifications from localStorage
-  function loadNotifications() {
-    const bookings = JSON.parse(localStorage.getItem("bookings")) || [];
-    const notifContainer = document.getElementById("notifications");
-    notifContainer.innerHTML = "";
-
-    bookings.forEach(b => {
-      if (b.status === "Approved" || b.status === "Rejected") {
-        const div = document.createElement("div");
-        div.className = `notif ${b.status === "Approved" ? "approved" : "rejected"}`;
-        div.innerText = `Your booking for ${b.room} was ${b.status}`;
-        notifContainer.appendChild(div);
-      }
-    });
-
-    // Hide after 5 seconds
-    setTimeout(() => notifContainer.innerHTML = "", 5000);
-  }
-
-  window.onload = loadNotifications;
-</script>
-
+    if (userEmail) {
+      const bookingsRef = ref(db, 'bookings');
+      onValue(bookingsRef, (snapshot) => {
+        userBookingsDiv.innerHTML = "";
+        const data = snapshot.val();
+        for (let key in data) {
+          const booking = data[key];
+          if (booking.email === userEmail) {
+            userBookingsDiv.innerHTML += renderBooking(key, booking);
+          }
+        }
+      });
+    } else {
+      userBookingsDiv.innerHTML = "<p>No bookings found. Please book a room.</p>";
+    }
+  </script>
 </body>
 </html>
